Changes for i18n. Move webkit to source files from the content provider.